log
Sun 14 Aug 2022 06:50:08 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:7: error: expected identifier or ‘(’ before ‘=’ token
   40 |   int = i = 0;
      |       ^
exercises.c:43:8: error: ‘i’ undeclared (first use in this function)
   43 |   for(;i < n/2; i++){
      |        ^
exercises.c:43:8: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
7690477
Sun 14 Aug 2022 06:50:12 PM UTC: 
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:7: error: expected identifier or ‘(’ before ‘=’ token
   40 |   int = i = 0;
      |       ^
exercises.c:43:8: error: ‘i’ undeclared (first use in this function)
   43 |   for(;i < n/2; i++){
      |        ^
exercises.c:43:8: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
1f5f987
Sun 14 Aug 2022 06:50:25 PM UTC: 
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:7: error: expected identifier or ‘(’ before ‘=’ token
   40 |   int = i = 0;
      |       ^
exercises.c:43:8: error: ‘i’ undeclared (first use in this function)
   43 |   for(;i < n/2; i++){
      |        ^
exercises.c:43:8: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
58b645c
Sun 14 Aug 2022 06:50:55 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
fee729e
Sun 14 Aug 2022 06:58:38 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 20/70
7422bdf
